[[_release_notes]]
= Release Notes
include::include.adoc[]

== 2.2 (tbd)

== 2.2-M3 (2022-07-15)

* Add support for `IterationSelector` to run individual iterations
* Update to JUnit 5.9.0-RC1

Thanks to all the contributors to this release: Marc Philipp

== 2.2-M2 (2022-07-15)

* Add junit-platform `TestTag` support with the <<extensions.adoc#test-tag-extension,@Tag>> extension spockPull:1467[]
* Add `IDataDriver` extension point and refactor data provider handling spockPull:1479[]
* Add <<data-driven-testing.adoc#multi-data-pipe-named, named deconstruction>> for multi variable datapipes.
  This might lead to changed behavior results if the data object implements `Map` but supports both positional `getAt(int)` and named `getAt(String)` access. In earlier versions, the positional access was used, but now the named access will be used. spockPull:1463[]
* Add custom class support to `@TempDir`, you can use any class that has a single `java.io.File` or `java.nio.file.Path` as constructor parameter spockPull:1430[]
* Improve `@Stepwise` can be applied to data-driven feature methods, having the effect of executing them sequentially (even if concurrent test mode is active) and to skip subsequent iterations is one iteration fails. spockPull:1442[]
* Improve `EmbeddedSpecCompiler` by making package declaration configurable in `EmbeddedSpecCompiler`
* Improve do not evaluate feature-skipping conditions for skipped specs spockPull:1459[]
* Improve behavior when trying to run Spock with unsupported Groovy version in IDEA spockIssue:1421[]
* Improve Java 17 compatibility by using new `invokeDefault` instead of reflection
* Fix compatibility with certain locales, for example `tr_TR` spockIssue:1414[]
* Fix Spring 6 incompatibility spockIssue:1428[]
* Fix test reporting issue with Maven, where an error on the Specification level was not visible spockIssue:1444[]
* Fix context pollution in `IterationNode.around()` spockIssue:1441[]